Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
None
-
e6db901a2989ddb180f6b3fae9ad1317b0f3ed3d
Description
The syntax of attached QML properties is "<AttachingType>.<propertyName>". The AttachingType part is missing in the Qt 5.2 docs.
- Qt 5.1
- "ListView.isCurrentItem : bool"
- http://qt-project.org/doc/qt-5.1/qtquick/qml-qtquick2-listview.html#isCurrentItem-prop
- Qt 5.2:
- ".isCurrentItem : bool"
- http://qt-project.org/doc/qt-5/qml-qtquick-listview.html#isCurrentItem-prop
Attachments
Issue Links
- is required for
-
QTBUG-35199 Qt 5.3 Documentation Issues (meta bug)
-
- Closed
-